// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicSearchCreatableField Component DynamicSearchCreatableField renders 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field gds-select-container input-select-field input-select-field"
    >
      <div
        class=" css-1959ul7-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-1l9db9l-control"
        >
          <div
            class=" css-9plg90-ValueContainer"
          >
            <div
              class=" css-14el2xx-placeholder"
              id="react-select-2-placeholder"
            >
              Select...
            </div>
            <div
              class=" css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-2-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=""
                id="DATA-TEST-ID"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
            >
              <i
                class="dynamic-search-icon icon"
                data-testid="DATA-TEST-ID-magnifier"
                icon="fal,magnifying-glass"
              />
            </div>
          </div>
        </div>
        <input
          name="name"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DynamicSearchCreatableField Component DynamicSearchCreatableField renders with values in disabled highligted 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field gds-select-container input-select-field input-select-field"
    >
      <div
        class=" css-j5ssuk-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-16avjwk-control"
        >
          <div
            class=" css-9plg90-ValueContainer"
          >
            <div
              class=" css-lr9fot-singleValue"
            >
              Label 1
            </div>
            <div
              class=" css-jzldcf-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=""
                disabled=""
                id="DATA-TEST-ID"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-109onse-indicatorSeparator"
            />
            <div
              aria-hidden="true"
            >
              <i
                class="dynamic-search-icon icon"
                data-testid="DATA-TEST-ID-magnifier"
                icon="fal,magnifying-glass"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DynamicSearchCreatableField Component DynamicSearchCreatableField renders with values in readonly 1`] = `
<div>
  <div
    class="gds-field-group"
  >
    <div
      class="field gds-select-container input-select-field-read-only input-select-field"
      data-testid="DATA-TEST-ID"
    >
      <span
        class="gds-typography"
      >
        Label 1
      </span>
    </div>
  </div>
</div>
`;

exports[`DynamicSearchCreatableField Component DynamicSearchCreatableField renders with values with fieldSize and inline 1`] = `
<div>
  <div
    class="gds-field-group field-size-6 field-inline"
  >
    <div
      class="field gds-select-container input-select-field input-select-field"
    >
      <div
        class=" css-1959ul7-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-4-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-1l9db9l-control"
        >
          <div
            class=" css-9plg90-ValueContainer"
          >
            <div
              class=" css-qc6sy-singleValue"
            >
              Label 1
            </div>
            <div
              class=" css-6j8wv5-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=""
                id="DATA-TEST-ID"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1okebmr-indicatorSeparator"
            />
            <div
              aria-hidden="true"
            >
              <i
                class="dynamic-search-icon icon"
                data-testid="DATA-TEST-ID-magnifier"
                icon="fal,magnifying-glass"
              />
            </div>
          </div>
        </div>
        <input
          name="name"
          type="hidden"
          value="VALUE1"
        />
      </div>
    </div>
  </div>
</div>
`;
